[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "bec-gateway"
authors = [
    { name = "Bruno Kraychete da Costa", email = "brunokc@kraychete.com" },
]
description = "BEC (Bryant Evolution Connex) Gateway"
classifiers = [
    "Programming Language :: Python :: 3",
]
dynamic = ["version", "readme"]
dependencies = [
    "aiohttp==3.8.3",
    "pyproxy @ git+https://github.com/brunokc/pyProxy",
    "pywsp @ git+https://github.com/brunokc/pyWSP"
]

[tool.setuptools]
package-dir = { "bec" = "src" }

[tool.setuptools.dynamic]
version = { attr = "bec.__version__" }
readme = { file = ["README.md"] }
