[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "bec-gateway"
authors = [
    { name = "Bruno Kraychete da Costa", email = "brunokc@kraychete.com" },
]
description = "BEC (Bryant Evolution Connex) Gateway"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version", "readme", "dependencies"]

[tool.setuptools]
package-dir = { "bec" = "src" }

[tool.setuptools.dynamic]
version = { attr = "bec.__version__" }
readme = { file = ["README.md"] }
dependencies = { file = ["src/requirements.txt"] }

[tool.setuptools.package-data]
bec-gateway = ["py.typed"]
