[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "bec"
authors = [
    { name = "Bruno Kraychete da Costa", email = "brunokc@kraychete.com" },
]
description = "BEC (Bryant Evolution Connex) add-on for Home Assistant"
classifiers = [
    "Programming Language :: Python :: 3",
]
dynamic = ["version", "readme"]

[tool.setuptools]
package-dir = { "bec" = "." }

[tool.setuptools.dynamic]
version = { attr = "bec.__version__" }
readme = { file = ["README.md"] }
